--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>News Homepage</title>
     <link
       rel="shortcut icon"
-      href="/assets/images/favicon-32x32.png"
+      href="/assets/images/bvge .png"
       type="image/x-icon"
     />
     <link rel="stylesheet" href="/style.css">
