added link to trending

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <li><a href="">Home</a></li>
           <li><a href="">New</a></li>
           <li><a href="">Popular</a></li>
-          <li><a href="">Trending</a></li>
+          <li><a href="https://www.instagram.com/debbie_obama?igsh=MWgzNnpyZjR1dWdnbQ== ">Trending</a></li>
           <li><a href="">Categories</a></li>
         </ul>
       </nav>
