--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <li><a href="">Home</a></li>
           <li><a href="">New</a></li>
           <li><a href="">Popular</a></li>
-          <li><a href="https://www.instagram.com/debbie_obama?igsh=MWgzNnpyZjR1dWdnbQ== ">Trending</a></li>
+          <li><a href="">Trending</a></li>
           <li><a href="">Categories</a></li>
         </ul>
       </nav>
@@ -37,7 +37,7 @@
                 the power of the platforms back into the hands of the people.
                 But is it really fulfilling its promise?
               </p>
-              <p><a href="">READ MORE</a></p>
+              <p><a href="https://www.instagram.com/debbie_obama?igsh=MWgzNnpyZjR1dWdnbQ== ">READ MORE</a></p>
             </section>
           </div>
         </section>
