--- a/index.html
+++ b/index.html
@@ -37,13 +37,14 @@
                 the power of the platforms back into the hands of the people.
                 But is it really fulfilling its promise?
               </p>
-              <p><a href="https://www.instagram.com/debbie_obama?igsh=MWgzNnpyZjR1dWdnbQ== ">READ MORE</a></p>
+              <p><a href="https://www.instagram.com/debbie_obama?igsh=MWgzNnpyZjR1dWdnbQ== " target="_blank">READ MORE</a></p>
             </section>
           </div>
         </section>
         <section class="ver-news">
             <h1>New</h1>
-            <aside class="updates">
+            <aside class="genz">
+              <aside class="updates">
                 <p><a href="">Hydrogen VS Electric Cars</a></p>
                 <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
             </aside>
@@ -56,6 +57,7 @@
             <aside class="updates">
                 <p><a href="">Is VC Funding Drying Up?</a></p>
                 <p>  Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
+            </aside>
             </aside>
         </section>
       </div>
