--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
       href="/assets/images/bvge .png"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
     <main>
       <nav class="navbar">
         <img src="/assets/images/logo.svg" alt="comoany logo" />
-        <img src="/assets/images/icon-menu.svg" alt="Menu" class="hamburger">
+        <img src="/assets/images/icon-menu.svg" alt="Menu" class="hamburger" />
         <ul>
           <li><a href="">Home</a></li>
           <li><a href="">New</a></li>
@@ -26,7 +26,8 @@
       </nav>
       <div class="body1">
         <section class="image-news">
-          <div class="image"></div>
+          <div class="image"><img src="/assets/images/image-web-3-desktop.jpg" alt="Desktop view"></div>
+          <div class="mobileimage"><img src="/assets/images/image-web-3-mobile.jpg" alt="mobile view view"></div>
           <div class="news2">
             <section class="web3">
               <p>The Bright Future of Web 3.0?</p>
@@ -37,54 +38,68 @@
                 the power of the platforms back into the hands of the people.
                 But is it really fulfilling its promise?
               </p>
-              <p><a href="https://www.instagram.com/debbie_obama?igsh=MWgzNnpyZjR1dWdnbQ== " target="_blank">READ MORE</a></p>
+              <p>
+                <a
+                  href=""
+                  >READ MORE</a
+                >
+              </p>
             </section>
           </div>
         </section>
         <section class="ver-news">
-            <h1>New</h1>
+          <h1>New</h1>
+          <div class="newscont">
             <aside class="genz">
-              <aside class="updates">
-                <p><a href="">Hydrogen VS Electric Cars</a></p>
-                <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
-            </aside>
-            <hr>
             <aside class="updates">
-                <p><a href="">The Downsides of AI Artistry</a></p>
-                <p>What are the possible adverse effects of on-demand AI image generation?</p>
+              <p><a href="">Hydrogen VS Electric Cars</a></p>
+              <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
             </aside>
-            <hr>
+            <hr />
             <aside class="updates">
-                <p><a href="">Is VC Funding Drying Up?</a></p>
-                <p>  Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
+              <p><a href="">The Downsides of AI Artistry</a></p>
+              <p>
+                What are the possible adverse effects of on-demand AI image
+                generation?
+              </p>
             </aside>
+            <hr />
+            <aside class="updates">
+              <p><a href="">Is VC Funding Drying Up?</a></p>
+              <p>
+                Private funding by VC firms is down 50% YOY. We take a look at
+                what that means.
+              </p>
             </aside>
+          </aside>
         </section>
       </div>
+          </div>
+          
       <section class="body2">
         <div class="gadgets">
-            <img src="/assets/images/image-retro-pcs.jpg" alt="retro-pc">
-            <article>
-                <p>01</p>
-                <p><a href="">Reviving Retro PCs</a></p>
-                <p>What happens when old PCs are given modern upgrades?</p>
-            </article>
+          <img src="/assets/images/image-retro-pcs.jpg" alt="retro-pc" />
+          <article>
+            <p>01</p>
+            <p><a href="">Reviving Retro PCs</a></p>
+            <p>What happens when old PCs are given modern upgrades?</p>
+          </article>
         </div>
         <div class="gadgets">
-            <img src="/assets/images/image-top-laptops.jpg" alt="laptops">
-            <article>
-                <p>02</p>
-                <p><a href="">Top 10 Laptops of 2022</a></p>
-                <p>Our best picks for various needs and budgets.</p>
-            </article>
+          <img src="/assets/images/image-top-laptops.jpg" alt="laptops" />
+          <article>
+            <p>02</p>
+            <p><a href="">Top 10 Laptops of 2022</a></p>
+            <p>Our best picks for various needs and budgets.</p>
+          </article>
         </div>
         <div class="gadgets">
-            <img src="/assets/images/image-gaming-growth.jpg" alt="gaming">
-            <article>
-                <p>03</p>
-                <p><a href="">The Growth of Gaming</a></p>
-                <p>How the pandemic has sparked fresh opportunities.</p>
-            </article>
+          <img src="/assets/images/image-gaming-growth.jpg" alt="gaming" />
+          <article>
+            <p>03</p>
+            <p><a href="">The Growth of Gaming</a></p>
+            <p>How the pandemic has sparked fresh opportunities.</p>
+          </article>
         </div>
       </section>
     </main>
